// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for color: contrast-high, orientation: "horizontal" and theme %s 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-high);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-high, orientation: "horizontal" and theme %s 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-high);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-high, orientation: "vertical" and theme %s 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-high);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-high, orientation: "vertical" and theme %s 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-high);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low, orientation: "horizontal" and theme %s 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low, orientation: "horizontal" and theme %s 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low, orientation: "vertical" and theme %s 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low, orientation: "vertical" and theme %s 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low, orientation: {"base":"horizontal","xs":"vertical","s":"horizontal","m":"vertical","l":"horizontal","xl":"vertical"} and theme %s 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 1px;
  width: 100%;
}
@media(min-width:480px) {
  hr {
    height: 100%;
    width: 1px;
  }
}

@media(min-width:760px) {
  hr {
    height: 1px;
    width: 100%;
  }
}

@media(min-width:1000px) {
  hr {
    height: 100%;
    width: 1px;
  }
}

@media(min-width:1300px) {
  hr {
    height: 1px;
    width: 100%;
  }
}

@media(min-width:1760px) {
  hr {
    height: 100%;
    width: 1px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for color: contrast-medium, orientation: "horizontal" and theme %s 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-medium);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-medium, orientation: "horizontal" and theme %s 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-medium);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-medium, orientation: "vertical" and theme %s 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-medium);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-medium, orientation: "vertical" and theme %s 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-medium);
  height: 100%;
  width: 1px;
}"
`;
